--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,11 +8,21 @@
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    .app-loading {
+      background-image: url('/assets/loading.svg');
+      background-repeat: no-repeat;
+      background-size: 100px 100px;
+      background-position: center;
+      position: fixed;
+      top: 0; width: 100%; height: 100%;
+      -webkit-animation: fa-spin 2s infinite linear;
+      animation: fa-spin 2s infinite linear;
+    }
+  </style>
 </head>
 
 <body>
-  <app-root>
-    <div class="pi-spin" style="background-image: url('/assets/loading.png'); background-repeat: no-repeat; background-size: 100px 100px; background-position: center; position: fixed; width: 100%; height: 100%;"></div>
-  </app-root>
+  <app-root><div class="app-loading"></div></app-root>
   </body>
 </html>
