created admin view

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     .app-loading {
-      background-image: url('/assets/loading.svg');
+      background-image: url('/assets/svg/loading.svg');
       background-repeat: no-repeat;
       background-size: 100px 100px;
       background-position: center;
