--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'; object-src 'self';">
   <title>FlyTrainer</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
