--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     .app-loading {
-      background-image: url('./assets/svg/loading.svg');
+      background-image: url('assets/svg/loading.svg');
       background-repeat: no-repeat;
       background-size: 100px 100px;
       background-position: center;
